--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -2,88 +2,119 @@
   author       = {{Wikipedia contributors}},
   title        = {3D projection --- {Wikipedia}{,} The Free Encyclopedia},
   year         = {2023},
-  howpublished = {\url{https://en.wikipedia.org/w/index.php?title=3D_projection&oldid=1148285432}},
-  note         = {[Online; accessed 6-April-2023]}
+  url          = {https://en.wikipedia.org/w/index.php?title=3D_projection&oldid=1148285432},
+  note         = {[accessed 6-April-2023]}
 }
 
 @article{ada,
   title  = {{How Ada advances the science of graphics with DLSS 3.}},
   author = {{Henry C Lin and  Andrew Burnes}},
   year   = {2022},
-  note   = {[Online; accessed 2-May-2023]}
+  note   = {[accessed 2-May-2023]},
+  url    = {https://images.nvidia.com/aem-dam/Solutions/geforce/ada/ada-lovelace-architecture/nvidia-ada-gpu-science.pdf}
+}
+
+@misc{agile,
+  title  = {Agile Development Life Cycle},
+  author = {John Adam},
+  year   = {2022},
+  month  = {11},
+  day    = {2},
+  url    = {https://kruschecompany.com/agile-software-development/}
 }
 
 @article{blinn,
   title  = {{Illumination for Computer Generated Pictures}},
   author = {{Bui Tuong Phong}},
   year   = {1975},
-  note   = {[Online; accessed 12-December-2022]}
+  note   = {[accessed 12-December-2022]},
+  url    = {https://users.cs.northwestern.edu/~ago820/cs395/Papers/Phong_1975.pdf}
 }
+
 
 @misc{bounding_boxes,
   title        = {MDN Web Docs, 3D collision detection},
-  howpublished = {\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}}
+  author       = {{Mozilla Developer Network contributors}},
+  year         = {2021},
+  url          = {https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}
 }
-
 
 @misc{camera_projection,
   title        = {Model View Projection},
-  howpublished = {\url{https://jsantell.com/model-view-projection/}}
+  author       = {Jordan Santell},
+  year         = {2019},
+  month        = {4},
+  day          = {14},
+  url          = {https://jsantell.com/model-view-projection/}
 }
 
 @misc{cereal,
   title        = {cereal - A C++11 library for serialization},
-  howpublished = {\url{https://uscilab.github.io/cereal/}}
+  author       = {Grant, W. Shane and Voorhies, Randolph},
+  year         = {2017},
+  url = {https://uscilab.github.io/cereal/}
 }
 
 @misc{cheat_engine,
   title        = {Cheat Engine},
-  howpublished = {\url{https://www.cheatengine.org/}}
+  author       = {Dark Byte},
+  url = {https://www.cheatengine.org/}
 }
 
 @misc{cmake,
   title        = {CMake, Open Source and Cross Platform Build System},
-  howpublished = {\url{https://cmake.org/}}
+  url          = {https://cmake.org/}
 }
 
 @misc{coordinate_systems,
   title        = {Coordinate Systems},
-  howpublished = {\url{https://learnopengl.com/Getting-started/Coordinate-Systems}}
+  author = {Joey de Vries},
+  year   = {2014},
+  month  = {6},
+  url    = {https://learnopengl.com/Getting-started/Coordinate-Systems}
 }
 
 @misc{cpp-guidelines,
   title        = {C++ Core Guidelines},
-  howpublished = {\url{https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines}}
+  author       = {Bjarne Stroustrup},
+  year         = {2023},
+  month        = {4},
+  day          = {13},
+  url          = {https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines}
 }
 
 @misc{cryptopp,
   title        = {Crypto++ Library},
-  howpublished = {\url{https://www.cryptopp.com/}}
+  author       = {Wei Dai},
+  url          = {https://www.cryptopp.com/}
 }
 
 @misc{font-awesome,
   title        = {Font Awesome},
-  howpublished = {\url{https://fontawesome.com/}}
+  url          = {https://fontawesome.com/}
 }
 
 @misc{frustum_culling,
   title        = {High-Level Strategic Tools for Fast Rendering},
-  howpublished = {\url{https://techpubs.jurassic.nl/manuals/nt/developer/Optimizer_PG/sgi_html/ch05.html}}
+  author       = {{George Eckel, Renate Kempf, and Leif Wennerberg}},
+  year         = {1998},
+  url          = {https://techpubs.jurassic.nl/manuals/nt/developer/Optimizer_PG/sgi_html/ch05.html}
 }
 
 @misc{github,
   title        = {GitHub},
-  howpublished = {\url{https://github.com/}}
+  url          = {https://github.com/}
 }
 
 @misc{gitvcs,
   title        = {Git Version Control System},
-  howpublished = {\url{https://git-scm.com/}}
+  url          = {https://git-scm.com/}
 }
 
 @misc{gltf,
   title        = {glTF Runtime 3D asset delivery},
-  howpublished = {\url{https://www.khronos.org/gltf/}}
+  author       = {{The Khronos Group}},
+  url          = {https://www.khronos.org/gltf/}
 }
 
 @misc{gta_leak,
@@ -91,118 +122,139 @@
   year         = {{2022}},
   month        = {{9}},
   day          = {{19}},
-  howpublished = {\url{https://www.theguardian.com/games/2022/sep/19/grand-theft-auto-6-leak-who-hacked-rockstar-and-what-was-stolen}}
+  url          = {https://www.theguardian.com/games/2022/sep/19/grand-theft-auto-6-leak-who-hacked-rockstar-and-what-was-stolen}
 }
 
 @misc{imgui,
   title        = {ImGui},
-  howpublished = {\url{https://github.com/ocornut/imgui/}}
+  author       = {Aymar Cornut},
+  year         = {2018},
+  url = {https://github.com/ocornut/imgui/}
 }
 
 @misc{imguizmo,
   title        = {ImGuizmo},
-  howpublished = {\url{https://github.com/CedricGuillemet/ImGuizmo}}
+  author = {Cedric Guillemet},
+  url = {https://github.com/CedricGuillemet/ImGuizmo}
 }
 
 @article{indentation,
-  title        = {K and R Indentation Style},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Indentation_style}}
+  title = {K\&R Indentation Style},
+  url   = {https://en.wikipedia.org/wiki/Indentation_style}
 }
 
 @misc{mit,
-  title        = {The MIT License},
-  howpublished = {\url{https://opensource.org/license/mit/}}
+  title = {The MIT License},
+  url   = {https://opensource.org/license/mit/}
 }
 
+
 @misc{moire_pattern,
-  author       = {{Wikipedia contributors}},
-  title        = {Moire Pattern --- {Wikipedia}{,} The Free Encyclopedia},
-  year         = {2023},
-  howpublished = {\url{https://en.wikipedia.org/wiki/Moir%C3%A9_pattern}},
-  note         = {[Online; accessed 21-April-2023]}
+  author = {{Wikipedia contributors}},
+  title  = {Moire Pattern --- {Wikipedia}{,} The Free Encyclopedia},
+  year   = {2023},
+  url    = {https://en.wikipedia.org/wiki/Moir%C3%A9_pattern},
+  note   = {[accessed 21-April-2023]}
 }
 
 
 @misc{premake,
-  title        = {Premake - Powerfully simple build configuration},
-  howpublished = {\url{https://premake.github.io/}}
+  title = {Premake - Powerfully simple build configuration},
+  url   = {https://premake.github.io/}
 }
-
 
 @article{rdna,
   title  = {{RDNA architecture - The all new Radeon gaming architecture powering ``Navi''}},
   author = {{AMD}},
   year   = {2019},
-  note   = {[Online; accessed 23-January-2023]}
+  note   = {[accessed 23-January-2023]},
+  url    = {https://www.amd.com/system/files/documents/rdna-whitepaper.pdf}
 }
 
 @misc{render_man,
   title        = {RenderMan},
-  howpublished = {\url{https://renderman.pixar.com/}}
+  author       = {Pixar},
+  url          = {https://renderman.pixar.com/}
 }
 
 @misc{renderdoc,
   title        = {RenderDoc},
-  howpublished = {\url{https://renderdoc.org/}}
+  author = {Baldur Karlsson},
+  url = {https://renderdoc.org/}
 }
 
 @misc{rgp,
   title        = {AMD Radeon GPU Profiler},
-  howpublished = {\url{https://gpuopen.com/rgp/}}
+  url          = {https://gpuopen.com/rgp/}
 }
 
 @misc{svn,
-  title        = {Apache Subversion},
-  howpublished = {\url{https://subversion.apache.org/}}
+  title  = {Apache Subversion},
+  author = {The Apache Software Foundation},
+  year   = {2000},
+  url    = {https://subversion.apache.org/}
 }
+
 
 @misc{texture_mipmaps,
-  title        = {Texture Mipmapping},
-  howpublished = {\url{https://learnopengl.com/Getting-started/Textures}}
+  title  = {Texture Mipmapping},
+  author = {Joey de Vries},
+  year   = {2014},
+  month  = {6},
+  url    = {https://learnopengl.com/Getting-started/Textures}
 }
 
-
 @misc{unity,
-  title        = {Unity},
-  howpublished = {\url{https://unity.com/}}
+  title  = {Unity},
+  author = {Unity Technologies},
+  url    = {https://unity.com/}
 }
 
 @misc{unreal_engine,
-  title        = {Unreal Engine},
-  howpublished = {\url{https://www.unrealengine.com/en-US/}}
+  title  = {Unreal Engine},
+  author = {Epic Games},
+  url    = {https://www.unrealengine.com/en-US/}
+}
+
+@misc{vcs_survey,
+  title  = {StackOverflow Developer Survey},
+  year   = {2022},
+  author = {StackOverflow},
+  url    = {https://survey.stackoverflow.co/2022/#section-version-control-version-control-systems}
 }
 
 @misc{visualstudio,
-  title        = {Microsoft Visual Studio 2022},
-  howpublished = {\url{https://visualstudio.microsoft.com/}}
+  title  = {Microsoft Visual Studio 2022},
+  author = {Microsoft},
+  url    = {https://visualstudio.microsoft.com/}
 }
 
 @misc{visualstudioassistx,
-  title        = {Visual Studio Assist X},
-  howpublished = {\url{https://www.wholetomato.com/}}
+  title  = {{Visual Studio Assist X}},
+  author = {Embarcadero},
+  url    = {https://www.wholetomato.com/}
 }
 
 @misc{volk,
-  title        = {Vulkan Loader},
-  howpublished = {\url{https://gpuopen.com/learn/reducing-vulkan-api-call-overhead/}}
-}
-
-@misc{vulkan-spec,
-  title        = {Vulkan 1.3 Specification},
-  howpublished = {\url{https://registry.khronos.org/vulkan/specs/1.3/html/vkspec.html/}}
+  title  = {Vulkan Loader},
+  author = {Arseny Kapoulkine},
+  year   = {2018},
+  month  = {4},
+  day    = {26},
+  url    = {https://gpuopen.com/learn/reducing-vulkan-api-call-overhead/}
 }
 
 @misc{vulkan,
-  title = {Vulkan},
-  howpublished = {\url{https://www.vulkan.org/}},
+  title  = {Vulkan},
+  author = {{The Khronos Vulkan Working Group}},
+  url    = {https://www.vulkan.org/}
 }
 
-@msic{vcs_survey,
-  title={StackOverflow Developer Survey 2022},
-  howpublished={\url{https://survey.stackoverflow.co/2022/#section-version-control-version-control-systems}}
-}
-
-@msic{agile,
-  title={Agile Development Life Cycle},
-  howpublished={\url{https://survey.stackoverflow.co/2022/#section-version-control-version-control-systems}}
+@misc{vulkan-spec,
+  title  = {Vulkan 1.3 Specification},
+  author = {{The Khronos  Vulkan Working Group}},
+  year   = {2023},
+  month  = {5},
+  day    = {4},
+  url    = {https://registry.khronos.org/vulkan/specs/1.3/html/vkspec.html}
 }
